--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "start": "react-scripts start",
     "dev": "nodemon server/server.js",
     "build": "react-scripts build",
+    "build:prod": "REACT_APP_SERVER_URL=https://your-domain.com npm run build",
+    "server": "node server/server.js",
+    "server:dev": "nodemon server/server.js",
+    "install:server": "cd server && npm install",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
