--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production environment
-REACT_APP_SERVER_URL=https://mydanananmıomain.com
+REACT_APP_SERVER_URL=https://myananinamidomain.com
 PORT=3000
